--- a/filterbeta22/index.html
+++ b/filterbeta22/index.html
@@ -153,7 +153,7 @@
 											<div class="form-check">
 												<input class="form-check-input" type="checkbox" onclick='applyFilter("Type:Blend")' id="TypeBlend">
 												<label class="form-check-label" for="defaultCheck9">
-													blend
+													Blend
 												</label>
 											</div>
 										</div>
@@ -298,7 +298,7 @@
 												<label class="form-check-label" for="inlineRadio3">Highest Prices</label>
 											</div>
 											<div class="form-check">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" onclick='applyOrderby("price:high")'>
+												<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" onclick='applyOrderby("price:low")'>
 												<label class="form-check-label" for="inlineRadio4">Lowes Prices</label>
 											</div>
 										</div>
