--- a/filter/index.html
+++ b/filter/index.html
@@ -2,12 +2,12 @@
 <html>
 <head lang="en" id="head">
 	<title>Filters | Supresso</title>
-	<link rel="stylesheet icon" href="../img/ikon-supresso.png">
+	<link rel="stylesheet icon" href="../webasset/ikon-supresso.svg">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="component/bootstrap.min.css">
-	<link rel="stylesheet" href="head.css">
+	<link rel="stylesheet" href="../component/bootstrap.min.css">
+	<link rel="stylesheet" href="../head.css">
 	<link rel="stylesheet" href="filter.css">
 </head>
 <body>
@@ -364,9 +364,9 @@
 	var userid = 66;
 	</script>
 
-	<script type="text/javascript" src="component/jquery.js"></script>
-	<script type="text/javascript" src="component/bootstrap.min.js"></script>
-	<script type="text/javascript" src="head.js"></script>
+	<script type="text/javascript" src="../component/jquery.js"></script>
+	<script type="text/javascript" src="../component/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../head.js"></script>
 	<script type="text/javascript" src="filter.js"></script>
 	<script type="text/javascript">
 		// [].forEach.cal(ldocument.querySelectorAll("*"), function(a){a.style.outline="1px solid green";})
